# pulferdev-rust

./: Cargo.toml  Dockerfile
content/: about.html  afrita.html  crafts.html  cv.html  exploring.html  petrol.html  sidelines.html  sports.html  tech.html  travel.html
src/: main.rs
src/sitecontent/: mod.rs
static/: sitemap.xml
static/css/: main.css
templates/: afrita.html  base.html  crafts.html  index.hbs  sports.html  tech.html
