[package]
name = "pulfer-dev"
version = "0.1.1"
authors = ["Jonathan Pulfer <pulfer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.20"
serde = "1"
serde_derive = "1"
env_logger = "0.6"
yarte = "0"
chrono = "0.4.10"